SessionReaper to clean out sessions table; HikariCP as db connection pool (faster, more modern)