@@ -19,12 +19,13 @@ val versions = new {
   val scalaTest = "3.2.16"
   val jdbc = "4.0.0"
   val sentry = "6.28.0"
+  val http4s = "1.0.0-M40"
 }
 
 resolvers ++= Seq(
   "Akka library repository".at("https://repo.akka.io/maven"),
   "Artima Maven Repository".at("https://repo.artima.com/releases")
-)
+) ++ Resolver.sonatypeOssRepos("snapshots")
 
 lazy val root = (project in file("."))
   .settings(
@@ -42,15 +43,15 @@ lazy val root = (project in file("."))
     ),
     javacOptions ++= Seq("-parameters"),
     libraryDependencies ++= Seq(
-      "com.typesafe.akka"  %% "akka-actor-typed"             % versions.akka,
-      "com.typesafe.akka"  %% "akka-stream"                  % versions.akka,
-      "com.typesafe.akka"  %% "akka-coordination"            % versions.akka,
-      "com.typesafe.akka"  %% "akka-cluster"                 % versions.akka,
-      "com.typesafe.akka"  %% "akka-cluster-tools"           % versions.akka,
-      "com.typesafe.akka"  %% "akka-http"                    % versions.http,
-      "com.typesafe"       %% "ssl-config-core"              % "0.6.1",
-      "com.typesafe.akka"  %% "akka-persistence-typed"       % versions.akka,
-      "com.typesafe.akka"  %% "akka-persistence-cassandra"   % "1.1.1",
+      "com.typesafe.akka"  %% "akka-actor-typed"           % versions.akka,
+      "com.typesafe.akka"  %% "akka-stream"                % versions.akka,
+      "com.typesafe.akka"  %% "akka-coordination"          % versions.akka,
+      "com.typesafe.akka"  %% "akka-cluster"               % versions.akka,
+      "com.typesafe.akka"  %% "akka-cluster-tools"         % versions.akka,
+      "com.typesafe.akka"  %% "akka-http"                  % versions.http,
+      "com.typesafe"       %% "ssl-config-core"            % "0.6.1",
+      "com.typesafe.akka"  %% "akka-persistence-typed"     % versions.akka,
+      "com.typesafe.akka"  %% "akka-persistence-cassandra" % "1.1.1",
     ) ++ Seq(
       "org.scalatest"       %% "scalatest"                % versions.scalaTest,
       "com.typesafe.akka"   %% "akka-actor-testkit-typed" % versions.akka,
@@ -60,28 +61,35 @@ lazy val root = (project in file("."))
       "org.scalikejdbc"     %% "scalikejdbc-test"         % versions.jdbc,
       "org.specs2"          %% "specs2-core"              % "4.20.2"
     ).map(_ % "test") ++ Seq(
-      "io.circe"           %% "circe-generic"                  % "0.14.5",
-      "de.heikoseeberger"  %% "akka-http-circe"                % "1.39.2",
-      "org.wvlet.airframe" %% "airframe-ulid"                  % "23.8.4",
-      "io.altoo"           %% "akka-kryo-serialization-typed"  % "2.5.1",
-      "io.lemonlabs"       %% "scala-uri"                      % "4.0.3",
-      "org.scalikejdbc"    %% "scalikejdbc"                    % versions.jdbc,
-      "org.scalikejdbc"    %% "scalikejdbc-config"             % versions.jdbc,
-      "org.scalactic"      %% "scalactic"                      % versions.scalaTest,
-      "io.scalaland"       %% "chimney"                        % "0.7.5",
-      "ch.megard"          %% "akka-http-cors"                 % "1.2.0",
+      "io.circe"           %% "circe-generic"                 % "0.14.6",
+      "de.heikoseeberger"  %% "akka-http-circe"               % "1.39.2",
+      "org.wvlet.airframe" %% "airframe-ulid"                 % "23.8.6",
+      "io.altoo"           %% "akka-kryo-serialization-typed" % "2.5.1",
+      "io.lemonlabs"       %% "scala-uri"                     % "4.0.3",
+      "org.scalikejdbc"    %% "scalikejdbc"                   % versions.jdbc,
+      "org.scalikejdbc"    %% "scalikejdbc-config"            % versions.jdbc,
+      "org.scalactic"      %% "scalactic"                     % versions.scalaTest,
+      "io.scalaland"       %% "chimney"                       % "0.7.5",
+      "ch.megard"          %% "akka-http-cors"                % "1.2.0",
     ) ++ Seq(
       "com.datastax.oss"  % "java-driver-core" % "4.17.0",
       "io.netty"          % "netty-handler"    % "4.1.97.Final",
       "org.owasp.encoder" % "encoder"          % "1.2.3",
-      "org.yaml"          % "snakeyaml"        % "2.1",
+      "org.yaml"          % "snakeyaml"        % "2.2",
       "ch.qos.logback"    % "logback-classic"  % "1.4.11",
       "com.h2database"    % "h2"               % "2.2.220",
+      "com.zaxxer"        % "HikariCP"         % "5.0.1",
       "io.sentry"         % "sentry"           % versions.sentry,
       "io.sentry"         % "sentry-logback"   % versions.sentry,
     ) ++ Seq(
       "io.kamon" %% "kamon-bundle"       % versions.kamon,
-      "io.kamon" %% "kamon-apm-reporter" % versions.kamon
+      "io.kamon" %% "kamon-apm-reporter" % versions.kamon,
+      "io.kamon" %% "kamon-http4s-1.0"   % "2.6.1",
+    ) ++ Seq(
+      "org.http4s" %% "http4s-ember-client" % versions.http4s,
+      "org.http4s" %% "http4s-ember-server" % versions.http4s,
+      "org.http4s" %% "http4s-dsl"          % versions.http4s,
+      "org.http4s" %% "http4s-circe"        % versions.http4s,
     ),
     releaseProcess := Seq[ReleaseStep](
       checkSnapshotDependencies, inquireVersions,
@@ -89,13 +97,12 @@ lazy val root = (project in file("."))
       setReleaseVersion, commitReleaseVersion, tagRelease,
       setNextVersion, commitNextVersion, pushChanges
     ),
-    jibBaseImage := "openjdk:17",
+    jibBaseImage := "eclipse-temurin:17-jre-alpine",
     jibRegistry := "ghcr.io",
     jibCustomRepositoryPath := Some("jvorhauer/spikes"),
     jibTcpPorts := List(8080),
     jibUseCurrentTimestamp := true,
     jibName := "spikes",
-    jibJvmFlags := List("-XX:+UseCGroupMemoryLimitForHeap"),
     jibTags := List("latest"),
     jibTargetImageCredentialHelper := Some("docker-credential-osxkeychain"),
   )
